# reCNN_visual_prosthesis

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_copy  README.md  convert_img_to_npy.py  core.py  create_mei.py  docker-compose.yml  encoder_3nd_test_longer_no_bias.pt  environment.yml  export_stim.py  export_stim2.py  macaqueV1_resps_means.pt  macaqueV1_resps_stds.pt  models.py  new_models.py  pickle_utils.py  pyproject.toml  readout.py  requirements.txt  setup_environment.sh
LSV1M_training/: LSV1M_utils.py  best_model.pt  configs.py  create_images_for_optostim_with_model_x.ipynb  create_small_version_of_dataset.py  dataset.py  em_single_train.py  final_create_figure_3.ipynb  final_create_figure_3_model_x.ipynb  load_best_model.py  load_best_models.py  new_load_best.py  playground.ipynb  preprocess_training_data.py  sweep_config.yaml  sweep_launch.py  sweep_training_script.py  test_train.py  train_and_evaluate_brcnn.py  train_and_evaluate_em.py
check_monkey_model/: classical_exps_config.py
check_trained_model/: check_meis_when_changing_readout_params.py  check_positions_and_orientation.py  check_size_tuning.py  classical_exps_config.py  run_classical_exps.py
experiments/: MEI.py  utils.py
monkey_training/: best_model.pt  best_val_corr.pt  encoder_2nd_test.pt  encoder_3nd_test.pt  encoder_3nd_test_longer.pt  encoder_3nd_test_longer_no_bias2.pt  encoder_4th_new_data.pt  encoder_new_data_20240524_212048.pt  encoder_new_data_20240524_213533.pt  encoder_new_data_20240524_220451.pt  encoder_new_data_20240524_220545.pt  encoder_test.pt  final_create_figure_2.ipynb  (+16 more)
(+42 files in other folders)
