[project]
name = "recnn-visual-prosthesis"
version = "0.1.0"
description = "Training utilities and experiments for the beyond retinotopy: orientation aware stimulation protocol project."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
py-modules = ["pickle_utils", "models", "create_mei", "readout"] 

